Devops_Engineer_assignment/k8s/logging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    name: logging
    istio-injection: disabled
