Devops_Engineer_assignment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-collection
  labels:
    name: data-collection
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    name: istio-system
